# numerical-calculation-simulation-for-python

./: README.md  pyproject.toml
notebook/: 1-bisectional.ipynb  1-modules.ipynb  1-numeric-error.ipynb  2-freefall.ipynb  2-modules.ipynb  2-potential.ipynb  2-rungekutta.ipynb  3-gausian.ipynb  3-laplacian.ipynb  3-modules.ipynb  4-cellularautomaton.ipynb  4-lifegame.ipynb  4-traffic.ipynb  5-knapsack.ipynb  5-random.ipynb  5-trape.ipynb  6-simulation.ipynb
